...
    <string name="create_book_update_task">Create book update task</string>
    <string name="auto_task_book_update_name">Update %1$s</string>
    <string name="auto_task_book_update_disabled">%1$s: updates disabled</string>
    <string name="import_auto_task">Import automatic tasks</string>
    <string name="import_status_new">New</string>
    <string name="import_status_update">Update</string>
    <string name="import_status_exist">Exists</string>
    <string name="auto_task_edit">Edit automatic task</string>
    <string name="auto_task_debug">Debug task</string>
    <string name="auto_task_name">Task name</string>
    <string name="auto_task_cron">Cron schedule</string>
    <string name="auto_task_cron_hint">Five fields: minute hour day month weekday</string>
    <string name="auto_task_comment">Comment</string>
...
